--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "prettier": "3.5.2",
     "tailwindcss": "^3.4.1"
   }
 }
